// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render correctly when no web3 connection 1`] = `
<header
  className="App-header"
>
  <h1
    className="App-title"
  >
    Not connect to the blockchain
  </h1>
</header>
`;

exports[`render correctly with web3 connection 1`] = `
<header
  className="App-header"
>
  <h1
    className="App-title"
  >
    Connected to the blockchain
  </h1>
</header>
`;
